--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
           <button id="button">Claim your free trial</button>
           <small>
-            By clicking the button, you are agreeing to our<span> Terms and Services</span>
+            By clicking the button, you are agreeing to our 
+            <span>  Terms and Services</span>
             </small>
         </form>
       </div>
